--- a/DEV Folio/style.css
+++ b/DEV Folio/style.css
@@ -50,13 +50,13 @@ a{
    margin-top: 200px;
    margin-left: 40px;
 }
-.wooo{
+.woo{
     color: white;
     margin: 140px;
     margin-top: -130px;
     font-size: 15px; 
 }
-you{
+.you{
     border: 0px solid black;
     height: 25px;
     width: 60px;
@@ -66,7 +66,7 @@ you{
     color: red;
     font-size: 10px;
 }
-your{
+.your{
     border: 0px solid black;
     height: 25px;
     width: 60px;
